--- a/index.css
+++ b/index.css
@@ -27,14 +27,14 @@ body {
 .sidebar .logo {
     color: #ff5a5a;
     font-weight: 900;
-    padding: 0.32rem 0;
+    padding: 32px 0;
     text-align: center;
     display: block;
 }
 
 .sidebar .menu {
     overflow-y: auto;
-    height: calc(92vh - 0.6rem);
+    height: calc(92vh - 60px);
     overscroll-behavior: contain;
 }
 
@@ -49,7 +49,7 @@ div {
 }
 .rightBody {
     margin-bottom: 10px;
-    padding: 0.20rem 0.25rem 0.15rem 0.25rem;
+    padding: 20px 25px 15px 25px;
     background-color: #fff;
     text-align: center;
     flex-shrink: 0;
