--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
     z-index: 0;
     top: 0;
     left: 0;
-    width: 2.2rem;
+    width: 180px;
     height: 100%;
     background-color: #fff;
     /* text-align: center; */
