--- a/index.css
+++ b/index.css
@@ -1,78 +1,87 @@
 * {
     margin: 0;
-    align-items: center;
-    overflow: hidden;
     padding: 0;
+    box-sizing: border-box;
+}
+ul,a {
     text-decoration: none;
-    color: #fff;
+    list-style: none;
+}
+body {
+    background-image: url(https://cdn.pixabay.com/photo/2021/10/01/03/57/mountain-6671289_1280.jpg);
+    background-position: center center;
+    /* 背景图不平铺 */
+    background-repeat: no-repeat;
+    /* 当内容高度大于图片高度时，背景图像的位置相对于viewport固定 */
+    background-attachment: fixed;
+    /* 让背景图基于容器大小伸缩 */
+    background-size: cover;
+    /* 设置背景颜色，背景图加载过程中会显示背景色 */
+    background-color: #464646;
 }
 
-.sidebar {
-    position: fixed;
-    /* z-index: 0; */
-    top: 0;
-    left: 0;
-    width: 9.9rem;
-    height: 100%;
-    background-color: rgba(169, 225, 239, 0.493);
-}
-
-.sidebar .logo {
-    /* background-color: #c00; */
-    font-weight: 900;
-    padding: 0.8rem 0.9rem;
-    /* display: inline-block; */
-    /* box-sizing: border-box; */
-    border-bottom: gray solid 2px;
-}
-
-.sidebar .logo a {
-    color: rgb(132, 1, 219);
-}
-
-.sidebar .logo a:hover {
-    color: blue;
-}
-
-.sidebar .menu {
-    /* display: inline-block; */
-    text-indent: 0.8rem;
-    height: 100%;
-    margin-top: 0.5em;
-}
-
-.menu-Classes {
-    /* background: #c00; */
-    line-height: 2.8em;
-    font-size: small;
-    color: rgb(18, 150, 6);
-}
-
-.menu-Classes a {
-    color: rgb(215, 100, 0);
-}
-
-.menu-Classes:hover ,.menu-Classes a:hover {
-    background-color: rgba(129, 86, 195,0.3);
-    color: rgb(210, 19, 19);
-}
-
-.rightBody {
-    padding: 45px 25px 15px 25px;
-    /* background-color: #fff; */
+div.logo {
+    height: 60px;
+    background-color: rgba(118, 169, 239, 0.689);
     text-align: center;
-    /* flex-shrink: 0; */
-    width: 100%;
-    max-width: 100%;
-    padding-right: calc(var(--bs-gutter-x) * .5);
-    padding-left: calc(var(--bs-gutter-x) * .5);
-    margin-top: var(--bs-gutter-y);
-    padding-left: 10rem;
-    color: #c00;
-    font-weight: bold;
-    -webkit-text-fill-color: transparent;
-    background-image: -webkit-linear-gradient(left,#007eef,#dc5cb6 25%,#007eef 50%,#dc5cb6 75%,#007eef);
-    background-size: 200%,100%;
-    -webkit-background-clip: text;
-    -webkit-animation: word 3s linear infinite;
+    line-height: 60px;
+}
+
+div.nav {
+    height: 40px;
+    width: 600px;
+    background-color: none;
+    margin: 0 auto;
+    font-size: 18px;
+}
+
+.classes {
+    float: left;
+    
+    height: 40px;
+    width: 150px;
+    color: white;
+    background-color: rgba(255, 192, 203, 0.692);
+    text-align: center;
+    line-height: 40px;
+    
+}
+.classes:hover {
+    background-color: rgba(128, 128, 128, 0.763);
+}
+
+div.con {
+    height: 600px;
+    width: 1200px;
+    margin: 1rem auto;
+    background-color: rgba(48, 48, 141, 0.192);
+}
+
+div.main a {
+    float: left;
+    height: 585px;
+    width: 400px;
+    color: aliceblue;
+    background-image: url(https://gmu-download.oss-cn-beijing.aliyuncs.com/MTY1OTQ5MDQ1OTA4MiM3MDkjcG5n.png);
+    background-position: center center;
+    /* 背景图不平铺 */
+    background-repeat: no-repeat;
+    /* 让背景图基于容器大小伸缩 */
+    background-size: auto;
+    background-color: red;
+
+    text-align: center;
+    line-height: 1000px;
+    margin-top: 5px;
+}
+
+.gmain {
+    float: right;
+    height: 290px;
+    width: 390px;
+    background-color: rgb(252, 239, 0);
+    text-align: center;
+    line-height: 290px;
+    margin-left: 5px;
+    margin-top: 5px;
 }
