--- a/index.css
+++ b/index.css
@@ -35,6 +35,15 @@ div.nav {
     font-size: 18px;
 }
 
+div.bkm {
+    width: 400;
+    height:70px;
+    text-align: center;
+}
+iframe {
+    border: none;
+}
+
 .classes {
     float: left;
     
